--- a/style.css
+++ b/style.css
@@ -1,19 +1,27 @@
-#header{
-    background-color: aqua;
-    padding: 20px;
-    height: 40px;
-    margin: 20px;
+body {
+    background-color: #EEEEEE;
 }
+
+#header{
+    background-color: white;
+    display: flex;
+    flex-direction: row;
+    margin: 20px;
+    
+}
+
 #video-section{
     background-color: blueviolet;
     padding: 20px;
     height: 350px;
 }
+
 #side-section{
     background-color: chartreuse;
     padding: 20px;
     height: 1650px;
 }
+
 #comments-section{
     background-color: crimson;
     padding: 20px;
@@ -21,23 +29,70 @@
     margin-top: 10px;
     margin-bottom: 20px;
 }
+
 #footer{
     background-color: mediumblue;
     padding: 50px;
     margin: 20px;
 }
+
 #div-section{
     margin: 20px;
-    
+    clear: both;
 }
+
 #div-section1{
     float: left;
     width: 60%;
 }
+
 #div-section2{
     float: right;
     width: 500px;
 }
+
 #div-footer{
     clear: both;
+}
+
+#header1 {
+    flex: 10%;
+}
+
+#header2{
+    flex: 65%;
+}
+
+#header3{
+    flex: 25%;
+}
+
+input[type=text] {
+    width: 100%;
+    padding: 10px;
+    margin: 22px 0 22px 0;
+    box-sizing: border-box;
+}
+
+button {
+    border: none;
+    color: white;
+    padding: 12px;
+    margin: 22px 50px 22px 0;
+    cursor: pointer;
+}
+
+button#search {
+    background-color: lightsteelblue;
+    float: left;
+}
+
+button#search:hover {
+    background-color: black;
+    color: white;
+}
+
+button#sign-in {
+    background-color:blue;
+    float: right;
 }
