--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
     margin-bottom: 20px;
 }
 #footer{
-    background-color: gainsboro;
+    background-color: white;
     padding: 50px;
     margin: 20px;
 }
@@ -66,5 +66,36 @@
     
 }
 #footer-top{
-
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid rgb(187, 181, 181);
+    padding-bottom: 0;
+}
+#footer-top1{
+    margin-right: 10px;
+}
+.ftop2{
+    height: 30px;
+    font-weight: 500;
+    font-size: 11px;
+    text-decoration: none;
+    white-space: nowrap;
+    line-height: normal;
+    vertical-align: middle;
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.046875) 0px, 1px ,0px;
+    background-color: rgb(248, 248, 248);
+    color: rgb(51, 51, 51);
+    padding: 0, 10px;
+    border-color: rgb(211, 211, 211);
+    border-top-left-radius: 2px 2px;
+    border-top-right-radius: 2px 2px;
+    border-bottom-right-radius: 2px 2px;
+    border-bottom-left-radius: 2px 2px;
+    border-width: 1px;
+    border-style: solid;
+    margin: 0px -1px 0px 0px;
+    padding: 0px 10px;
+    border-color: rgb(211, 211, 211);
+    margin-right: 10px;
 }
