--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body{
     height: 1650px;
 }
 
-#comments-section{
+.comments-section{
     background-color: white;
     /* height: 1250px; */
     margin-top: 2px;
@@ -211,14 +211,14 @@ hr {
     margin: 30px 5px 0 5px;
 }
 
-p#show {
+p.show {
     text-align: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     cursor: pointer;
     color: lightgrey;
 }
 
-p#show:hover {
+p.show:hover {
     color: black;
 }
 
@@ -231,4 +231,8 @@ div.comment-details {
     display: flex;
     margin: auto;
     /* text-align: center; */
+}
+
+iframe {
+    border: 0;
 }
