--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body{
     background-color: #EEEEEE;
     margin-right: 150px;
     margin-left: 150px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #header{
@@ -28,10 +29,46 @@ body{
     /* height: 1250px; */
     margin-top: 2px;
     padding: 8px;
-
     margin-bottom: 10px;
 }
 
+#comment-views {
+    display: block;
+    text-align: right;
+    font-size: large;
+}
+#comment-reaction {
+    float: right;
+    font-weight: lighter;
+    cursor: pointer;
+    margin-right: 5px;
+}
+#comment-views, #comment-reaction {
+    margin-right: 5px;
+    color: grey;
+}
+
+hr#comment-line {
+    color: lightgrey;
+    margin: 10px 5px 10px 5px;
+}
+
+div.comment-prereq  {
+    display: flex;
+    justify-content: space-between;
+}
+
+span#comment-share {
+    text-align: left;
+    cursor: pointer;
+    color: grey;
+    margin-left: 5px;
+}
+
+button#subscribe {
+    background-color: red;
+    color: white;
+}
 #footer{
     background-color: white;
     padding: 50px;
@@ -82,13 +119,13 @@ button {
     border: none;
     color: white;
     padding: 12px;
-    margin: 20px 20px 20px 0;
+    margin: 22px 0 20px 0;
     cursor: pointer;
 }
 
 button#search {
-    background-color: lightsteelblue;
     float: left;
+    color: grey;
 }
 
 button#search:hover {
@@ -99,6 +136,7 @@ button#search:hover {
 button#sign-in {
     background-color:blue;
     float: right;
+    margin-right: 5px;
 }
 
 figure {
@@ -118,6 +156,34 @@ button#nav-bar {
     color: black;
     background-color: white;
 }
+
+button#download {
+    border: none;
+    color: grey;
+    padding: 12px;
+    background-color: white;
+    position: relative;
+}
+
+button#download .tooltiptext {
+    display: none;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 3px;
+    padding: 5px 2px 5px 2px;
+    
+    /* Position the tooltiptext */
+    position: absolute;
+    z-index: 1;
+    top: 100%;
+    left: 50%;
+    margin-left: -20px;
+  }
+  
+button#download:hover .tooltiptext {
+    display: inline-block;
+  }
 
 .liz{
     display:inline;
@@ -202,7 +268,6 @@ button#nav-bar {
 }
 
 h1, h4, h5, h6 {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     margin: 2 0 0 0;
 }
 
@@ -213,7 +278,6 @@ hr {
 
 p.show {
     text-align: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     cursor: pointer;
     color: lightgrey;
 }
@@ -236,3 +300,4 @@ div.comment-details {
 iframe {
     border: 0;
 }
+
