--- a/style.css
+++ b/style.css
@@ -144,6 +144,9 @@ h3{
     margin: 0;
     padding: 0;
 }
+p.comment-header{
+    margin-top: 40px;
+}
 #subscribe {
     background-color: rgb(196, 5, 5);
     color: white;
